--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,600&display=swap');
+
+:root {
+  --cyan-color-primary: hsl(180, 66%, 49%);
+  --dark-violet-color-primary: hsl(257, 27%, 26%);
+
+  --red-color-secondary: hsl(0, 87%, 67%);
+
+  --gray-color-neutral: hsl(0, 0%, 75%);
+  --grayish-violet-color-neutral: hsl(257, 7%, 63%);
+  --very-dark-blue-color-neutral: hsl(255, 11%, 22%);
+  --very-dark-violet: hsl(260, 8%, 14%);
+}
+
+*
+{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+}
+
+body{
+  font-size: 18px;
+}
