--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-main-home></app-main-home>
 <app-shorten-link-ui></app-shorten-link-ui>
 <app-statistics></app-statistics>
+<app-footer></app-footer>
