--- a/src/app/shorten-link-ui/shorten-link-ui.component.scss
+++ b/src/app/shorten-link-ui/shorten-link-ui.component.scss
@@ -31,6 +31,7 @@
       border: none;
       color: white;
       background-color: var(--cyan-color-primary);
+      cursor: pointer;
     }
   }
 }
