--- a/src/app/shorten-link-ui/shorten-link-ui.component.html
+++ b/src/app/shorten-link-ui/shorten-link-ui.component.html
@@ -1,6 +1,6 @@
 <section class="shorten-container">
-  <div class="shorten-input">
-    <input type="text" class="input">
-    <input type="button" class="btn" value="Shorten it!">
-  </div>
+  <form class="shorten-input" (submit)="pegandoLink()">
+    <input type="text" class="input" [(ngModel)]="link" name="link">
+    <input type="submit" class="btn" value="Shorten it!">
+  </form>
 </section>
