--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,25 +21,29 @@
           </ul>
         </div>
         <div class="features-container">
-          <h1>Features</h1>
+          <h1>Recources</h1>
           <ul class="items">
-            <li>Link Shortening</li>
-            <li>Branded Link</li>
-            <li>Analytics</li>
+            <li>Blog</li>
+            <li>Developers</li>
+            <li>Support</li>
           </ul>
         </div>
         <div class="features-container">
-          <h1>Features</h1>
+          <h1>Company</h1>
           <ul class="items">
-            <li>Link Shortening</li>
-            <li>Branded Link</li>
-            <li>Analytics</li>
+            <li>About</li>
+            <li>Our Team</li>
+            <li>Careers</li>
+            <li>Contact</li>
           </ul>
         </div>
       </div>
       <div class="footer-medias">
         <div class="icons">
-
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          <i class="fa fa-pinterest" aria-hidden="true"></i>
+          <i class="fa fa-instagram" aria-hidden="true"></i>
         </div>
       </div>
     </div>
