--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-container">
   <nav class="navbar">
     <div class="logo-nav">
-      <img class="logo" routerLink="/" src="/assets/images/logo.svg" alt="">
+      <img class="logo" src="/assets/images/logo.svg" alt="">
     <ul class="navbar-items">
       <li class="item"><a>Features</a></li>
       <li class="item"><a>Pricing</a></li>
@@ -12,5 +12,6 @@
       <button class="login">Login</button>
       <button class="sign-up">Sign Up</button>
     </div>
+    <i class="fa fa-bars" aria-hidden="true"></i>
   </nav>
 </div>
